--- a/src/radio/style/index.less
+++ b/src/radio/style/index.less
@@ -19,6 +19,7 @@
   max-width: 100%;
   margin: 0;
   font-weight: normal;
+  line-height: 22px;
   white-space: nowrap;
   cursor: pointer;
 
@@ -34,6 +35,7 @@
     input[type='radio'].@{radio-prefix-cls} {
       position: relative;
       display: inline-block;
+      width: 16px;
       height: 16px;
       margin: 0;
       vertical-align: middle;
@@ -56,7 +58,7 @@
         background: var(--active-inner);
         border-radius: 50%;
         transform: scale(var(--s, 0.7));
-        opacity: 0;
+        opacity: var(--o, 0);
         transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
         content: '';
       }
@@ -67,6 +69,7 @@
         --d-t: 0.6s;
         --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
         --s: 0.5;
+        --o: 1;
       }
       &:disabled {
         --b: var(--disabled);
@@ -76,7 +79,10 @@
           --b: var(--disabled);
           --bc: var(--border);
         }
-        & + label {
+        &::after {
+          background: var(--disabled-inner);
+        }
+        & + span {
           cursor: not-allowed;
         }
       }
@@ -87,80 +93,12 @@
           }
         }
       }
-      &:not(.switch) {
-        width: 16px;
-        &::after {
-          opacity: var(--o, 0);
-        }
-        &:checked {
-          --o: 1;
-        }
-      }
-      & + label {
+
+      & + span {
         display: inline-block;
-        margin-left: 4px;
+        margin-left: 8px;
         font-size: 14px;
-        line-height: 21px;
-        vertical-align: middle;
-        cursor: pointer;
-      }
-    }
-    input[type='radio'].@{radio-disabled} {
-      &::after {
-        position: absolute;
-        top: 2px;
-        left: 2px;
-        display: block;
-        width: 10px;
-        height: 10px;
-        background: var(--disabled-inner);
-        border-radius: 50%;
-        transform: scale(var(--s, 0.7));
-        opacity: 0;
-        transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
-        content: '';
-      }
-      &:checked {
-        --b: var(--disabled);
-        --bc: var(--disabled);
-        --d-o: 0.3s;
-        --d-t: 0.6s;
-        --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
-        --s: 0.5;
-      }
-      &:disabled {
-        --b: var(--disabled);
-        cursor: not-allowed;
-        opacity: 0.9;
-        &:checked {
-          --b: var(--disabled);
-          --bc: var(--border);
-        }
-        & + label {
-          cursor: not-allowed;
-        }
-      }
-      &:hover {
-        &:not(:checked) {
-          &:not(:disabled) {
-            --bc: var(--border-hover);
-          }
-        }
-      }
-      &:not(.switch) {
-        width: 16px;
-        &::after {
-          opacity: var(--o, 0);
-        }
-        &:checked {
-          --o: 1;
-        }
-      }
-      & + label {
-        display: inline-block;
-        margin-left: 4px;
-        font-size: 14px;
-        line-height: 21px;
+        line-height: 22px;
         vertical-align: middle;
         cursor: pointer;
       }
@@ -169,76 +107,6 @@
 
   &__disabled {
     cursor: not-allowed;
-  }
-}
-
-.@{radio-prefix-cls} {
-  position: relative;
-  top: 0;
-  display: inline-block;
-  box-sizing: border-box;
-  width: 16px;
-  height: 16px;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  white-space: nowrap;
-  vertical-align: middle;
-  outline: none;
-  cursor: pointer;
-
-  &::after {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: block;
-    width: 5px;
-    height: 5px;
-    margin: auto;
-    background-color: @gray-0;
-    border-radius: 50%;
-    transform: scale(0) translate(-25%, -25%);
-    opacity: 0;
-    transition: all @radio-duration ease-in-out;
-    content: '';
-  }
-
-  &-input {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    cursor: pointer;
-    opacity: 0;
-  }
-
-  & + * {
-    display: inline-block;
-    padding: 0 8px;
-    color: @gray-5;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 22px;
-    vertical-align: middle;
-  }
-}
-
-.@{radio-disabled} {
-  background-color: @gray-1;
-  border-color: @gray-2;
-  box-shadow: none;
-
-  &::after {
-    background-color: #dfe2ed;
-    box-shadow: 0 1px 1px 0 rgba(223, 226, 237, 0.6);
-  }
-}
-
-.@{radio-checked}.@{radio-disabled} {
-  & + * {
-    opacity: 1;
   }
 }
 
@@ -251,24 +119,36 @@
     flex-direction: row;
     align-items: center;
 
-    .@{radio-prefix-cls} {
-      & + * {
-        padding: 0 0 0 8px;
-      }
-    }
+    // .@{radio-prefix-cls} {
+    //   & + * {
+    //     padding: 0 0 0 8px;
+    //   }
+    // }
   }
 
   &__vertical {
     flex-direction: column;
     align-items: flex-start;
 
-    .@{radio__wrapper} {
-      display: flex;
-      align-items: flex-start;
-      justify-content: flex-start;
+    // .@{radio__wrapper} {
+    //   display: flex;
+    //   align-items: flex-start;
+    //   justify-content: flex-start;
 
-      .@{radio-prefix-cls} {
-        margin-top: 3px !important;
+    //   .@{radio-prefix-cls} {
+    //     margin-top: 3px !important;
+    //   }
+    // }
+  }
+  @supports not (gap: 16px) {
+    &__horizontal {
+      .@{radio__wrapper} + .@{radio__wrapper} {
+        margin-left: 16px;
+      }
+    }
+    &__vertical {
+      .@{radio__wrapper} + .@{radio__wrapper} {
+        margin-top: 16px;
       }
     }
   }
